push in changes for Candidate and Population code

--- a/wordEvolution/wordEvolution.vcxproj
+++ b/wordEvolution/wordEvolution.vcxproj
@@ -151,7 +151,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Candidate.cpp" />
+    <ClCompile Include="Population.cpp" />
     <ClCompile Include="wordEvolution.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Candidate.h" />
+    <ClInclude Include="Population.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
